<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/valor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCD9D9"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="49dp"
        android:fontFamily="serif"
        android:text="@string/title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/precoalcool"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/precoalcool"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="14dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/alcoolPrice"
        android:inputType="number|numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/precogasolina"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/precogasolina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/gasolinePrice"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintStart_toStartOf="@+id/precoalcool"
        app:layout_constraintTop_toBottomOf="@+id/precoalcool" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginEnd="12dp"
        android:text="@string/answer"
        app:layout_constraintBaseline_toBaselineOf="@+id/result"
        app:layout_constraintEnd_toStartOf="@+id/result"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/result"
        android:layout_width="75dp"
        android:layout_height="25dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="225dp"
        android:visibility="visible"
        app:drawableBottomCompat="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="212dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="78dp"
        android:backgroundTint="#1565C0"
        android:inputType="numberDecimal"
        android:onClick="calcular"
        android:text="@string/button_calc"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/precogasolina"
        app:strokeColor="#0C0C0C"
        app:strokeWidth="1dp"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginBottom="63dp"
        android:text="@string/developed_by"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />
</androidx.constraintlayout.widget.ConstraintLayout>